--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>HackThisUser - KOMPUTER</title>
-	<link rel="stylesheet" type="text/css" href="style/Komputer-style.css">	
+	<link rel="stylesheet" type="text/css" href="css/Komputer-style.css">	
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 </head>
 
