--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 	<meta charset="utf-8" />
-	<title>HackThisUser - KOMPUTER</title>
+	<title>KOMPUTER</title>
 	<link rel="stylesheet" type="text/css" href="css/Komputer-style.css">	
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 </head>
