--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8" />
 	<title>KOMPUTER</title>
 	<link rel="stylesheet" type="text/css" href="css/Komputer-style.css">	
-   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+   	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<link rel="shortcut icon" href="/obrazy/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
